@@ -1,3 +1,4 @@
+* Nicer stdout output
 * Add junit-style reporting for Prometheus and network connectivity
 * Add junit-style reporting for tests
 * Add a consensus test utility to the project.
